# bibirags

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
examples/: README.md  quickstart_dashscope.py  quickstart_docs.py  quickstart_ollama.py  quickstart_openai.py  quickstart_single_backend.py
src/bibirags/: __init__.py  chunking.py  chunkingdirectory.py  llm.py
src/bibirags/backends/: __init__.py  chroma.py  lightrag.py  qdrant.py  txtai.py
tests/: conftest.py  test_bibirags.py
